--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/videojs/video.js.git"
+    "url": "https://github.com/Shashank8317/video.js.git"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
